[gd_scene load_steps=3 format=3 uid="uid://2cr7l7u55w4t"]

[ext_resource type="Script" path="res://demo/ui.gd" id="1_be8yx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ux3j"]
bg_color = Color(0.0338533, 0.0338533, 0.0338533, 0.772549)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_be8yx")

[node name="ShaderTypePanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 368.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7ux3j")

[node name="ShaderTypeButton" type="OptionButton" parent="ShaderTypePanel"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 360.0
offset_bottom = 32.0
alignment = 1
selected = 1
item_count = 3
popup/item_0/text = "Cycling Noise"
popup/item_1/text = "Sliding Noise"
popup/item_1/id = 1
popup/item_2/text = "Colorful Noise"
popup/item_2/id = 2

[node name="CyclePanel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 8.0
offset_top = 48.0
offset_right = 368.0
offset_bottom = 224.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7ux3j")

[node name="RichTextLabel" type="RichTextLabel" parent="CyclePanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 352.0
offset_bottom = 168.0
bbcode_enabled = true
text = "[b]SPACE[/b] - toggle effect:
[b]N[/b] - toggle randomize noise on resize

[b]X[/b] - clear noise
[b]R[/b] - randomize noise
Steps:
Speed:"
scroll_active = false

[node name="CycleEffectStatus" type="Label" parent="CyclePanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 320.0
offset_top = 8.0
offset_right = 352.0
offset_bottom = 32.0
text = "On"
horizontal_alignment = 1

[node name="CycleAutoNoiseStatus" type="Label" parent="CyclePanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 320.0
offset_top = 32.0
offset_right = 352.0
offset_bottom = 56.0
text = "On"
horizontal_alignment = 1

[node name="StepLabel" type="Label" parent="CyclePanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 64.0
offset_top = 120.0
offset_right = 112.0
offset_bottom = 152.0
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StepSlider" type="HSlider" parent="CyclePanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 120.0
offset_top = 128.0
offset_right = 352.0
offset_bottom = 144.0
min_value = 2.0
max_value = 8.0
value = 3.0
allow_greater = true
tick_count = 7
ticks_on_borders = true

[node name="SpeedLabel" type="Label" parent="CyclePanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 67.0
offset_top = 144.0
offset_right = 115.0
offset_bottom = 176.0
text = "0.125"
vertical_alignment = 1

[node name="SpeedSlider" type="HSlider" parent="CyclePanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 120.0
offset_top = 152.0
offset_right = 352.0
offset_bottom = 168.0
max_value = 0.5
step = 0.005
value = 0.125
allow_greater = true
tick_count = 5
ticks_on_borders = true

[node name="SlidePanel" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 48.0
offset_right = 368.0
offset_bottom = 296.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7ux3j")

[node name="RichTextLabel" type="RichTextLabel" parent="SlidePanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 352.0
offset_bottom = 248.0
bbcode_enabled = true
text = "[b]SPACE[/b] - toggle effect:
[b]N[/b] - toggle randomize noise on resize

[b]X[/b] - clear noise
[b]R[/b] - randomize noise
[b]I[/b] - invert effect
Frames per Update:
X Slide:
Y Slide:
Is Variable:"
scroll_active = false

[node name="SlideEffectStatus" type="Label" parent="SlidePanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 320.0
offset_top = 8.0
offset_right = 352.0
offset_bottom = 32.0
text = "On"
horizontal_alignment = 1

[node name="SlideAutoNoiseStatus" type="Label" parent="SlidePanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 320.0
offset_top = 32.0
offset_right = 352.0
offset_bottom = 56.0
text = "On"
horizontal_alignment = 1

[node name="FramesPerUpdateLabel" type="Label" parent="SlidePanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 160.0
offset_top = 144.0
offset_right = 208.0
offset_bottom = 176.0
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FramesPerUpdateSlider" type="HSlider" parent="SlidePanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 208.0
offset_top = 152.0
offset_right = 352.0
offset_bottom = 168.0
min_value = 1.0
max_value = 60.0
value = 1.0
tick_count = 5
ticks_on_borders = true

[node name="XSlideLabel" type="Label" parent="SlidePanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 64.0
offset_top = 168.0
offset_right = 112.0
offset_bottom = 200.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="XSlideSlider" type="HSlider" parent="SlidePanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 120.0
offset_top = 174.0
offset_right = 352.0
offset_bottom = 190.0
min_value = -4.0
max_value = 4.0
tick_count = 9
ticks_on_borders = true

[node name="YSlideLabel" type="Label" parent="SlidePanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 64.0
offset_top = 192.0
offset_right = 112.0
offset_bottom = 224.0
text = "1
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="YSlideSlider" type="HSlider" parent="SlidePanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 120.0
offset_top = 197.0
offset_right = 352.0
offset_bottom = 213.0
min_value = -4.0
max_value = 4.0
value = 1.0
tick_count = 9
ticks_on_borders = true

[node name="VariableButton" type="CheckButton" parent="SlidePanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 96.0
offset_top = 216.0
offset_right = 140.0
offset_bottom = 240.0

[node name="ColorPanel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 8.0
offset_top = 48.0
offset_right = 368.0
offset_bottom = 312.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7ux3j")

[node name="RichTextLabel" type="RichTextLabel" parent="ColorPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 352.0
offset_bottom = 264.0
bbcode_enabled = true
text = "[b]SPACE[/b] - toggle effect:
[b]N[/b] - toggle randomize noise on resize

[b]X[/b] - clear noise
[b]R[/b] - randomize noise
[b]O[/b] - white out noise
Value Steps:
Value Speed:
Hue Steps:
Hue Speed:
Hue Offset:"
scroll_active = false

[node name="ColorEffectStatus" type="Label" parent="ColorPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 320.0
offset_top = 8.0
offset_right = 352.0
offset_bottom = 32.0
text = "On"
horizontal_alignment = 1

[node name="ColorAutoNoiseStatus" type="Label" parent="ColorPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 320.0
offset_top = 32.0
offset_right = 352.0
offset_bottom = 56.0
text = "On"
horizontal_alignment = 1

[node name="ValueStepLabel" type="Label" parent="ColorPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 104.0
offset_top = 146.0
offset_right = 152.0
offset_bottom = 170.0
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ValueStepSlider" type="HSlider" parent="ColorPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 152.0
offset_top = 149.0
offset_right = 352.0
offset_bottom = 165.0
min_value = 2.0
max_value = 8.0
value = 2.0
allow_greater = true
tick_count = 7
ticks_on_borders = true

[node name="ValueSpeedLabel" type="Label" parent="ColorPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 112.0
offset_top = 168.0
offset_right = 160.0
offset_bottom = 192.0
text = "0.125"
vertical_alignment = 1

[node name="ValueSpeedSlider" type="HSlider" parent="ColorPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 168.0
offset_top = 172.0
offset_right = 352.0
offset_bottom = 188.0
max_value = 0.5
step = 0.005
value = 0.125
allow_greater = true
tick_count = 5
ticks_on_borders = true

[node name="HueStepLabel" type="Label" parent="ColorPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 88.0
offset_top = 191.0
offset_right = 136.0
offset_bottom = 215.0
text = "255"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HueStepSlider" type="HSlider" parent="ColorPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 136.0
offset_top = 195.0
offset_right = 352.0
offset_bottom = 211.0
min_value = 2.0
max_value = 255.0
value = 255.0
exp_edit = true
allow_greater = true
tick_count = 7
ticks_on_borders = true

[node name="HueSpeedLabel" type="Label" parent="ColorPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 104.0
offset_top = 214.0
offset_right = 152.0
offset_bottom = 238.0
text = "0.1"
vertical_alignment = 1

[node name="HueSpeedSlider" type="HSlider" parent="ColorPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 160.0
offset_top = 219.0
offset_right = 352.0
offset_bottom = 235.0
max_value = 0.5
step = 0.005
value = 0.1
allow_greater = true
tick_count = 5
ticks_on_borders = true

[node name="HueOffsetLabel" type="Label" parent="ColorPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 104.0
offset_top = 238.0
offset_right = 152.0
offset_bottom = 262.0
text = "0.0"
vertical_alignment = 1

[node name="HueOffsetSlider" type="HSlider" parent="ColorPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 144.0
offset_top = 241.0
offset_right = 352.0
offset_bottom = 257.0
max_value = 1.0
step = 0.005
allow_greater = true
tick_count = 5
ticks_on_borders = true

[node name="VariablePanel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 8.0
offset_top = 304.0
offset_right = 368.0
offset_bottom = 392.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7ux3j")

[node name="RichTextLabel" type="RichTextLabel" parent="VariablePanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 352.0
offset_bottom = 80.0
bbcode_enabled = true
text = "Speed Steps:
Brightness Exponent:
Light Attenuation:"
scroll_active = false

[node name="SpeedStepLabel" type="Label" parent="VariablePanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 101.0
offset_top = 4.0
offset_right = 149.0
offset_bottom = 36.0
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpeedStepsSlider" type="HSlider" parent="VariablePanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 144.0
offset_top = 8.0
offset_right = 352.0
offset_bottom = 32.0
min_value = 1.0
max_value = 6.0
value = 2.0
tick_count = 6

[node name="BrightnessExponentLabel" type="Label" parent="VariablePanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 170.0
offset_top = 29.0
offset_right = 218.0
offset_bottom = 61.0
text = "0.50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BrightnessExponentSlider" type="HSlider" parent="VariablePanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 216.0
offset_top = 32.0
offset_right = 352.0
offset_bottom = 56.0
max_value = 1.0
step = 0.01
value = 0.5
tick_count = 5

[node name="LightAttenuationLabel" type="Label" parent="VariablePanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 144.0
offset_top = 51.0
offset_right = 192.0
offset_bottom = 83.0
text = "1.00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LightAttenuationSlider" type="HSlider" parent="VariablePanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 192.0
offset_top = 56.0
offset_right = 352.0
offset_bottom = 80.0
max_value = 2.0
step = 0.01
value = 1.0
tick_count = 5

[connection signal="item_selected" from="ShaderTypePanel/ShaderTypeButton" to="." method="_on_shader_type_button_item_selected"]
[connection signal="value_changed" from="CyclePanel/StepSlider" to="." method="_on_step_slider_value_changed"]
[connection signal="value_changed" from="CyclePanel/SpeedSlider" to="." method="_on_speed_slider_value_changed"]
[connection signal="value_changed" from="SlidePanel/FramesPerUpdateSlider" to="." method="_on_frames_per_update_slider_value_changed"]
[connection signal="value_changed" from="SlidePanel/XSlideSlider" to="." method="_on_x_slide_slider_value_changed"]
[connection signal="value_changed" from="SlidePanel/YSlideSlider" to="." method="_on_y_slide_slider_value_changed"]
[connection signal="toggled" from="SlidePanel/VariableButton" to="." method="_on_variable_button_toggled"]
[connection signal="value_changed" from="ColorPanel/ValueStepSlider" to="." method="_on_value_step_slider_value_changed"]
[connection signal="value_changed" from="ColorPanel/ValueSpeedSlider" to="." method="_on_value_speed_slider_value_changed"]
[connection signal="value_changed" from="ColorPanel/HueStepSlider" to="." method="_on_hue_step_slider_value_changed"]
[connection signal="value_changed" from="ColorPanel/HueSpeedSlider" to="." method="_on_hue_speed_slider_value_changed"]
[connection signal="value_changed" from="ColorPanel/HueOffsetSlider" to="." method="_on_hue_offset_slider_value_changed"]
[connection signal="value_changed" from="VariablePanel/SpeedStepsSlider" to="." method="_on_speed_steps_slider_value_changed"]
[connection signal="value_changed" from="VariablePanel/BrightnessExponentSlider" to="." method="_on_brightness_exponent_slider_value_changed"]
[connection signal="value_changed" from="VariablePanel/LightAttenuationSlider" to="." method="_on_light_attenuation_slider_value_changed"]
